--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Arcade Game Clone</h1>
+    <p>You need to reach water. Use arrow keys to move. Avoid bugs - they teleporte you to initial position.</p>
+    <p class="goodluck">Good luck!</p>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    
 </body>
 </html>
