Added a button for start a game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Arcade Game Clone</h1>
     <p>You need to reach water. Use arrow keys to move. Avoid bugs - they teleporte you to initial position.</p>
     <p class="goodluck">Good luck!</p>
+    <button id="startgame">Start new game</button>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
